Changed website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/New_Profile_V2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caelum's Portfolio</title>
+    <title>Caelum Dudek</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
