Added flavour to card

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/New_Profile_V2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caelum Dudek</title>
+    <meta name="description" content="A simple website to help demonstrate my competencies, experience, and projects">
+
+
+    <meta property="og:title" content="Caelum Dudek">
+    <meta property="og:description" content="A simple website to help demonstrate my competencies, experience, and projects">
+    <meta property="og:image" content="/src/assets/images/New_Profile_V2.svg">
+    <meta property="og:url" content="https://caelumuvic.github.io/">
+    <meta property="og:type" content="website">
+
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
