Added flavour to card

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <meta property="og:type" content="website">
 
 
+    <meta name="twitter:card" content="/src/assets/images/New_Profile_V2.svg">
+    <meta name="twitter:title" content="Caelum Dudek">
+    <meta name="twitter:description" content="A simple website to help demonstrate my competencies, experience, and projects">
+    <meta name="twitter:image" content="/src/assets/images/New_Profile_V2.svg">
+
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
