Changed icon url

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/New_Profile_V2.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caelum Dudek</title>
     <meta name="description" content="A simple website to help demonstrate my competencies, experience, and projects">
@@ -10,12 +10,12 @@
 
     <meta property="og:title" content="Caelum Dudek">
     <meta property="og:description" content="A simple website to help demonstrate my competencies, experience, and projects">
-    <meta property="og:image" content="/src/assets/images/New_Profile_V2.svg">
+    <meta property="og:image" content="/logo.svg">
     <meta property="og:url" content="https://caelumuvic.github.io/">
     <meta property="og:type" content="website">
 
 
-    <meta name="twitter:card" content="/src/assets/images/New_Profile_V2.svg">
+    <meta name="twitter:card" content="/logo.svg">
     <meta name="twitter:title" content="Caelum Dudek">
     <meta name="twitter:description" content="A simple website to help demonstrate my competencies, experience, and projects">
     <meta name="twitter:image" content="/src/assets/images/New_Profile_V2.svg">
