fix: Fixed headers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Caelum Dudek">
     <meta property="og:description" content="A simple website to help demonstrate my competencies, experience, and projects">
     <meta property="og:image" content="/logo.svg">
-    <meta property="og:url" content="https://caelumuvic.github.io/">
+    <meta property="og:url" content="https://caelumdudek.pages.dev/">
     <meta property="og:type" content="website">
 
 
