fix: Small update to fix LinkedIn scraping

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Caelum Dudek</title>
-    <meta name="description" content="A simple website to help demonstrate my competencies, experience, and projects">
+    <meta name="description"
+          content="A simple website to help demonstrate my competencies, experience, and projects. I love software development, so drop in from time to time to see what I'm working on!">
+    <meta name="image" property="og:image"
+          content="https://media.licdn.com/dms/image/v2/D5616AQF9EtlA-wmOAg/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1738743284489?e=1755734400&v=beta&t=FuQqPl4BZZ2xVni7u_6f-v9tCcQ66xAfZDW6nEdrTTQ">
 
+    <meta name="author" content="Caelum Dudek">
 
     <meta property="og:title" content="Caelum Dudek">
-    <meta property="og:description" content="A simple website to help demonstrate my competencies, experience, and projects">
+    <meta property="og:description"
+          content="A simple website to help demonstrate my competencies, experience, and projects">
     <meta property="og:image" content="/logo.svg">
     <meta property="og:url" content="https://caelumdudek.pages.dev/">
     <meta property="og:type" content="website">
@@ -17,12 +22,13 @@
 
     <meta name="twitter:card" content="/logo.svg">
     <meta name="twitter:title" content="Caelum Dudek">
-    <meta name="twitter:description" content="A simple website to help demonstrate my competencies, experience, and projects">
+    <meta name="twitter:description"
+          content="A simple website to help demonstrate my competencies, experience, and projects">
     <meta name="twitter:image" content="/src/assets/images/New_Profile_V2.svg">
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
